# silicontoai

./: .gitignore  Makefile  README.md  gen_uvm_fix.py  l5_make_output.txt  pyproject.toml  replay_chain_summary.txt  test_golden.py  test_workflow_validation.py  update_golden.py  uvm_errors.txt
build_fp16/: Vnpu_core_top  Vnpu_core_top.cpp  Vnpu_core_top.d  Vnpu_core_top.h  Vnpu_core_top.mk  Vnpu_core_top__ConstPool_0.cpp  Vnpu_core_top__ConstPool_0.d  Vnpu_core_top__Syms.cpp  Vnpu_core_top__Syms.d  Vnpu_core_top__Syms.h  Vnpu_core_top___024root.h  Vnpu_core_top___024root__DepSet_h208b0367__0.cpp  Vnpu_core_top___024root__DepSet_h208b0367__0.d  Vnpu_core_top___024root__DepSet_h208b0367__0__Slow.cpp  Vnpu_core_top___024root__DepSet_h208b0367__0__Slow.d  Vnpu_core_top___024root__DepSet_h208b0367__1.cpp  Vnpu_core_top___024root__DepSet_h208b0367__1.d  Vnpu_core_top___024root__DepSet_h208b0367__2.cpp  Vnpu_core_top___024root__DepSet_h208b0367__2.d  Vnpu_core_top___024root__DepSet_h208b0367__3.cpp  Vnpu_core_top___024root__DepSet_h208b0367__3.d  Vnpu_core_top___024root__DepSet_h9f8a81fa__0.cpp  Vnpu_core_top___024root__DepSet_h9f8a81fa__0.d  Vnpu_core_top___024root__DepSet_h9f8a81fa__0__Slow.cpp  Vnpu_core_top___024root__DepSet_h9f8a81fa__0__Slow.d  Vnpu_core_top___024root__DepSet_h9f8a81fa__1.cpp  Vnpu_core_top___024root__DepSet_h9f8a81fa__1.d  Vnpu_core_top___024root__DepSet_h9f8a81fa__1__Slow.cpp  Vnpu_core_top___024root__DepSet_h9f8a81fa__1__Slow.d  Vnpu_core_top___024root__DepSet_h9f8a81fa__2.cpp  Vnpu_core_top___024root__DepSet_h9f8a81fa__2.d  (+131 more)
docs/: _config.yml  (+30 more)
(+560 files in other folders)
